frontend: feat: update constants

--- a/frontend-react/src/contsants/COLORS.scss
+++ b/frontend-react/src/contsants/COLORS.scss
@@ -4,6 +4,8 @@ $pri: #1877F2;
 $sec: #59deff;
 $ter: #77e6ff;
 $qua: #1954a1;
-$qui: #e3edff;
+$qui: #4283fa;
+$red: red;
+$green: rgb(63, 244, 63);
 $boxBorder: 2px solid #c5c5c5;
 $boxShadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
