--- a/frontend-react/src/index.scss
+++ b/frontend-react/src/index.scss
@@ -1,4 +1,5 @@
 @use './contsants/COLORS.scss';
+@use './contsants/FONTS.scss';
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 
 * {
@@ -29,6 +30,22 @@ a:hover {
   filter: brightness(120%);
 }
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: COLORS.$bg;
+  border-radius: 10spx;
+}
+
+::-webkit-scrollbar {
+  width: 7.5px;
+  background-color: COLORS.$bg;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: COLORS.$sec;
+  border-radius: 7.5px;
+}
+
 .btn {
   font-size: 14px;
   font-weight: 700;
@@ -48,4 +65,37 @@ a:hover {
 
 .btn:hover {
   filter: brightness(120%);
+}
+
+.btn-div {
+  width: 10%;
+  text-align: center;
+}
+
+.btn-header {
+  padding: 10px 2vw;
+  font-size: FONTS.$responsive-size;
+}
+
+.icons {
+  color: COLORS.$qui;
+  font-size: calc((1) * 0.8vw + 0.5em);
+  font-weight: 600;
+  cursor: pointer;
+  text-align: center;
+}
+
+.icons-container {
+  display: flex;
+  width: 10%;
+  gap: 10%;
+  justify-content: center;
+}
+
+.red {
+  background-color: COLORS.$red;
+}
+
+.green {
+  background-color: COLORS.$green;
 }
